# SaltCitySoftware

./: .gitignore  CLAUDE.md  Makefile  OUTLINE.md  README.md  pyproject.toml
HumanData/Test Bacteria/: GCF_000027045.1_ASM2704v1_genomic.fna
PCA visualization/: ESM2_Snake_Venome.ipynb
docs/: 00-sbir-topic-summary.md  01-annotation-pipeline-design.md  02-data-sources.md  03-evaluation-protocol.md  04-models-and-tools.md  05-references.md  06-benchmark.md  07-threat-characterization.md  08-bacterial-extension.md  README.md  glossary.md  walkthrough-1-newcomer.md  walkthrough-2-biology-undergrad.md  walkthrough-3-deep-dive.md
models/: go_classifier.meta.json
notebooks/: kaggle_bacterial_train.ipynb  lightning_bacterial_train.sh
scripts/: embed_3b.bat  embed_3b.py  embed_650m.py
src/tools/: __init__.py  correct.py  propagate.py
src/valib/: __init__.py  artifacts.py  godag.py  labels.py  predict.py
src/viral_annotation/: __init__.py  characterize.py  config.py  threat.py
src/viral_annotation/benchmark/: __init__.py  compare.py  run.py  temporal.py
src/viral_annotation/classifier/: __init__.py  ensemble.py  losses.py  model.py  pooling.py  serving.py
src/viral_annotation/cli/: __init__.py  threat.py  (+3 more)
tests/: conftest.py  test_bacterial_domain.py  test_benchmark.py  test_compare.py  test_dataset.py  test_embeddings.py  test_ensemble.py  test_finetune.py  test_go_dag.py  test_labels.py  test_metrics.py  test_pooling.py  test_split.py  test_threat.py  test_tools_correct.py  test_tools_propagate.py  test_train.py  test_training_refactor.py  test_valib_godag.py
(+28 files in other folders)
